# clang-alloc-free-checker

./: .travis.yml  AllocFreeChecker.cpp  CMakeLists.txt  LICENSE.txt  README.md  TODO
ci/: fix-clang-packaging.sh
test/Analysis/: alloc-free-checker.c  glib-array.c  glib-byte-array.c  glib-ptr-array.c  wireshark-tvb.c  wmem-alloc.c  wmem-scope.c
test/Analysis/Inputs/: glib-header.h  tvbuff-header.h  wmem-header.h
